added hyperlink to Alejandro footer button

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head></head>
 
-<div> 
+<div>
 <body>
     <h1>Alejandro Jose Perdomo Cuello</h1>
     <p><i>Your silence will not protect you.</i></p>
-</body>    
+</body>
 </div>
 
 <div>
@@ -92,11 +92,11 @@
     <table>
         <tr>
             <td><a href="https">><< Adnan Abdulaziz Ahmed ||</a></td>
-            <td><a href="https">Alejandro Jose PerdomoCuello ||</a></td>
+            <td><a href="https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/index.html">Alejandro Jose PerdomoCuello ||</a></td>
             <td><a href="https://github.com/balderb/markdown-challenge/blob/master/README.md">Balder Bongaerts >></a></td>
         </tr>
     </table>
-    
+
 </footer>
 
 </html>
