--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <div>
-    <img src:"https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/Alejandro%20Jose%20Perdomo%20Cuello%20Foto.jpg">
+    <img src="https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/Alejandro%20Jose%20Perdomo%20Cuello%20Foto.jpg" alt="Picture of Alejandro Jose Perdomo Cuello">
 </div>
 
 <div>
