--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </div>
 
 <div>
-    <img src="https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/Alejandro%20Jose%20Perdomo%20Cuello%20Foto.jpg" alt="Picture of Alejandro Jose Perdomo Cuello">
+    <img src="https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/Alejandro%20Jose%20Perdomo%20Cuello%20Foto.jpg" 
+    alt="Picture of Alejandro Jose Perdomo Cuello"
+    width="500" height="500">
 </div>
 
 <div>
@@ -18,15 +20,19 @@
     <h4>Me, in one sentence, can be described as unexpectedly creative person.</h4>
     <table>
         <tr>
-            <th>Birthday:</th>
-            <th>Favorite Color:</th>
-            <th>Favorite food:</th>
-            <th>Pineapple on pizza:</th>
+            <td>Birthday:</td>
+            <td>19/06</td>
         </tr>
         <tr>
-            <td>19/06</td>
+            <td>Favorite color:</td>
             <td>Blue or any vivid color</td>
-            <td>Colombian Empanadas, or Rijstpap or Gulab Jamun</td>
+        </tr>
+        <tr>
+            <td>Favorite food:</td>
+            <td>Colombian Empanadas or Rijstpap or Gulab Jamun</td>
+        </tr>
+        <tr>
+            <td>Pineapple on pizza:</td>
             <td>
                 <ul>
                     <li>[x] Yes</li>
