--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <style>
+        table, th, td {border: 1px solid black}
+    </style>
+</head>
 
 <div>
 <body>
