--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <style>
-        table, th, td {border: 1px solid black}
+        table {border: 1px solid black}
     </style>
 </head>
 
