--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </div>
 
 <div>
-    <img src="https://github.com/AlejandroPerdomoCuello/markdown-to-html/blob/master/Alejandro%20Jose%20Perdomo%20Cuello%20Foto.jpg" 
+    <img src="AlejandroJosePerdomoCuelloFoto.jpg" 
     alt="Picture of Alejandro Jose Perdomo Cuello"
-    width="500" height="500">
+    width="500" height="352">
 </div>
 
 <div>
