--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-    <img src="AlejandroJosePerdomoCuelloFoto.jpg" 
+    <img src="Alejandro Jose Perdomo Cuello Foto.jpg" 
     alt="Picture of Alejandro Jose Perdomo Cuello"
     width="500" height="352">
 </div>
